# SimpleConfigManager

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  SCM_ini_readme.md
CMake/: SCMConfig.cmake.in  UseSCM.cmake.in
examples/: CMakeLists.txt  custom_assert.cpp  custom_namespace.cpp  custom_typedefs.cpp  custom_types.cpp  example1.cpp  fs.cfg  hello_config.cpp  other.cfg
examples/noinline_example/: cfg.cpp  cfg.hpp  noinline.cpp  test1.cpp  test1.hpp  test2.cpp  test2.hpp
scm/: scm.hpp  scm_aton.hpp  scm_config.hpp.in  scm_details.hpp  scm_details_inl.hpp  scm_filesystem.cpp  scm_filesystem.hpp  scm_types.hpp  scm_utils.hpp
tests/: CMakeLists.txt  test.cfg  tests.cpp
tests/parser_test/valid/: 1.cfg
